--- a/serverless.yml
+++ b/serverless.yml
@@ -34,6 +34,7 @@ provider:
     REGION: us-east-1
     USER_TABLE: ${self:custom.user_table}
     BOT_NAME: ${self:custom.bot_name}
+    PERSISTENCE_TABLE: ${self:custom.bot_data_table}
     MAIN_LOG_GROUP: /aws/lambda/coffe-time-bot-${env:stage}-main
 
 package:
