--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy master branch
+name: Deploy main branch
 
 on:
   push:
@@ -9,25 +9,22 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup Node
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - name: serverless deploy
-      uses: serverless/github-action@v3.2
+        node-version: 16
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
       with:
-        args: deploy
+        python-version: 3.8
+
+    - name: Serverless Deploy
+      uses: dhollerbach/actions.serverless-with-python-requirements@v2
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-        REGION: ${{ secrets.REGION }}
-        USER_TABLE: ${{ secrets.USER_TABLE }}
-        CHAT_DATA_TABLE: ${{ secrets.CHAT_DATA_TABLE }}
-        PERSISTENCE_TABLE: ${{ secrets.PERSISTENCE_TABLE }}
+        stage: main
