--- a/serverless.yml
+++ b/serverless.yml
@@ -57,6 +57,16 @@ functions:
   main:
     handler: app/main.main
     url: true
+  schedule:
+    handler: app/schedule.main
+    # If you change the hour see the value of HOURS_DIFFERENCE in this file app/schedule.py
+    events:
+      # # -5 hours difference from UTC
+      # - schedule: cron(0 30 4 ? * MON-FRI)
+      # - schedule: cron(0 0 8 ? * MON-FRI)
+      - schedule: cron(25 3 ? * MON-FRI *)
+      - schedule: cron(30 14 ? * MON-FRI *)
+      - schedule: cron(30 18 ? * MON-FRI *)
 
 resources:
   Resources:
