--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "serverless-step-functions": "^3.7.0"
   },
   "dependencies": {
+    "@changesets/cli": "^2.27.6",
     "save-dev": "^0.0.1-security"
   }
 }
